--- a/back-end/compose.yml
+++ b/back-end/compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: ./build/Dockerfile
+    depends_on:
+      - db
     volumes:
       - ./app-plate:/go/src/github.com/app-plate
     ports:
@@ -14,4 +16,18 @@ services:
       - ./build/.go_env
     environment:
       - TZ=Asia/Tokyo
+    networks:
+      - tagapp_backend_network
     command: sh -c "go run ./cmd/main.go"
+  db:
+    build: ./mysql/
+    volumes:
+      - ./mysql/mysql_data:/var/lib/mysql         # perpetuation of data
+      - ./mysql/sqls:/docker-entrypoint-initdb.d  # pushing initial data
+      - ./mysql/logs:/var/log/mysql               # log record
+    env_file:
+      - ./mysql/.env_mysql
+    networks:
+      - tagapp_backend_network
+networks:
+  tagapp_backend_network:
