--- a/back-end/compose3.yml
+++ b/back-end/compose3.yml
@@ -1,10 +1,14 @@
+version: "3"
 services:
-
   db:
     build: ./mysql/
     volumes:
       - ./mysql/mysql_data:/var/lib/mysql         # perpetuation of data
       - ./mysql/sqls:/docker-entrypoint-initdb.d  # pushing initial data
       - ./mysql/logs:/var/log/mysql               # log record
-    environment:
-      - MYSQL_ROOT_PASSWORD=password
+    env_file:
+      - ./mysql/.env_mysql
+    networks:
+      - tagapp_backend_network
+networks:
+  tagapp_backend_network:
