--- a/front-end/front-app/package.json
+++ b/front-end/front-app/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.1",
     "next": "13.4.13",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "swr": "^2.2.1",
