--- a/front-end/front-app/package.json
+++ b/front-end/front-app/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/react-modal": "^3.16.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "next": "13.4.13",
     "react": "18.2.0",
