submit & logout modal

--- a/front-end/front-app/package.json
+++ b/front-end/front-app/package.json
@@ -17,10 +17,10 @@
     "bootstrap": "^5.3.1",
     "next": "13.4.13",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-cookie": "^5.0.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
-    "react-modal": "^3.16.1",
     "swr": "^2.2.1",
     "typescript": "5.1.6"
   }
