--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,4 +5,8 @@ server {
     location / {
         proxy_pass http://host.docker.internal:9000;
     }
+
+    location /back/ {
+        proxy_pass http://host.docker.internal:5000;
+    }
 }
