--- a/compose.yml
+++ b/compose.yml
@@ -11,9 +11,10 @@ services:
       - node_modules:/home/node/app/node_modules
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    networks:
+      - tagapp_backend_network
     command: sh -c "npm run dev"
   app-plate:
-    container_name: app-plate-go
     build:
       context: ./back-end
       dockerfile: ./build/Dockerfile
@@ -52,6 +53,8 @@ services:
       ./nginx
     ports:
     - "8080:80"
+    networks:
+      - tagapp_backend_network
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
