--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,9 +6,13 @@ server {
 
     location / {
         proxy_pass http://host.docker.internal:9000;
+
+        client_max_body_size 20M;
     }
 
     location /back/ {
         proxy_pass http://host.docker.internal:5000;
+
+        client_max_body_size 20M;
     }
 }
